--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -1,8 +1,8 @@
 {% load static %}
-{% load django_bootstrap5 %}
+{% comment %} {% load django_bootstrap5 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
-{% bootstrap_messages %}
+{% bootstrap_messages %} {% endcomment %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
