--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,22 +1,23 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h1>Tasks</h1>
+    <h1>Records</h1>
     
 {% endblock %}
 
 {% block content %}
-    {% for task in tasks %}
+    {% for record in records %}
     <div class="wrapper">
-        <h4>Title - {{ task.summary }}</h2>
-        <p>Task id - {{ task.id }}</p>
-        <p>Status - {{ task.status }}</p>
+        <h4>Author - {{ record.author }}</h2>
+        <p>Email - {{ record.email }}</p>
+        <p>Text - {{ record.text }}</p>
         {% comment %} <p>Status - {{ task.type }}</p> {% endcomment %}
-        <p><a href="{% url 'task_render' task.pk %}">View detail</a></p>
+        {% comment %} <p><a href="{% url 'task_render' task.pk %}">View detail</a></p>
         <p><a href="{% url 'task_edit' task.pk %}">Edit task</a></p>
-        <p><a href="{% url 'delete' task.pk %}">Delete task</a></p>
+        <p><a href="{% url 'delete' task.pk %}">Delete task</a></p> {% endcomment %}
     </div>
     {% endfor %}
 {% endblock%}
 {% block link %}
-    <a href="{% url 'task_creation' %}">Add task</a>
+    {% comment %} <a href="{% url 'task_creation' %}">Add task</a> {% endcomment %}
+{% endblock%}
