--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -1,8 +1,8 @@
 {% load static %}
-{% comment %} {% load django_bootstrap5 %}
+{% load django_bootstrap5 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
-{% bootstrap_messages %} {% endcomment %}
+{% bootstrap_messages %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +12,7 @@
             {% block link %}{% endblock %}
         </div>
     </div>
-    <title>{% block title%} Tasks {% endblock %}</title>
+    <title>{% block title%} Records {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
 </head>
 <body>
