--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h1>Records</h1>
-    
+    <h1>Guestbook</h1>
 {% endblock %}
 
 {% block content %}
