1.Добавлены форма писка по имени автора 2.Добавлена пагинация 3. Добавлены прелставления для посика и пагинации 4.Представления поиска и пагинации прописаны через include в представлении главной страницы 5.Добавлены стили пагинации 5.Удален файл views.py, т.к. все в пакете views

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -5,6 +5,10 @@
 {% endblock %}
 
 {% block content %}
+{% include 'partial/simple_search.html' %}
+{% if is_paginated %}
+        {% include 'partial/pagination.html' %}
+    {% endif%}
     {% for record in records %}
     <div class="wrapper">
         <h4>Author - {{ record.author }}</h2>
@@ -16,7 +20,9 @@
         <p><a href="{% url 'delete' task.pk %}">Delete task</a></p> {% endcomment %}
     </div>
     {% endfor %}
+    
 {% endblock%}
+
 {% block link %}
     {% comment %} <a href="{% url 'task_creation' %}">Add task</a> {% endcomment %}
 {% endblock%}
