--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -24,5 +24,5 @@
 {% endblock%}
 
 {% block link %}
-    {% comment %} <a href="{% url 'task_creation' %}">Add task</a> {% endcomment %}
+    <a href="{% url 'record_add' %}">Add record</a>
 {% endblock%}
