Проработан внешний вид представлений и отображений страниц, добавлены стили. Добавлены иконки редактирования и удаления

--- a/source/webapp/templates/record_edit.html
+++ b/source/webapp/templates/record_edit.html
@@ -10,3 +10,7 @@
         </div>
     </form>
 {% endblock %}
+{% block link %}
+    <a href="{% url 'index' %}">Main page</a>
+    <a href="{% url 'record_add' %}">Add record</a>
+{% endblock%}
