--- a/source/static/css/style.css
+++ b/source/static/css/style.css
@@ -44,3 +44,11 @@
     text-align: center;
     border: solid 1px gray;
 }
+
+.wrapper {
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 50%;
+    padding: 0 5px;
+    margin-bottom: 10px;
+}
