--- a/source/webapp/templates/partial/pagination.html
+++ b/source/webapp/templates/partial/pagination.html
@@ -1,5 +1,5 @@
-<div class="pagination">
-    <span class="step-links">
+<div class="pagination w-50 mx-auto">
+    <span class="step-links mx-auto">
         <a href="?{% if query %}{{ query }}{% endif %}&page=1">&laquo; To start</a>
         {% if page_obj.has_previous %}
             <a href="?{% if query %}{{ query }}{% endif %}&page={{ page_obj.previous_page_number }}">Back</a>
